[package]
name = "ohttp-relay-prototype"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1.10.1"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
spin-sdk = "3.1.0"
tower = { version = "0.5.2", features = ["util"] }
wasi = "0.14.2"
wasi-hyperium = { git = "https://github.com/lann/wasi-hyperium" }
#  wasi-hyperium = { path = "../wasi-hyperium" }
